log/build_2026-05-09_18-52-52/dxl_wt_openarm_leader/stderr.log
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::motion_compensation()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:142:20: error: assignment of read-only variable ‘goal_current’
  142 |       goal_current = 15;
      |       ~~~~~~~~~~~~~^~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:144:20: error: assignment of read-only variable ‘goal_current’
  144 |       goal_current = -15;
      |       ~~~~~~~~~~~~~^~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:146:20: error: assignment of read-only variable ‘goal_current’
  146 |       goal_current = 0;
      |       ~~~~~~~~~~~~~^~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
